feat: 😫Develop Statistical Analysis Features

--- a/src/resources/views/account/edit.hbs
+++ b/src/resources/views/account/edit.hbs
@@ -16,7 +16,7 @@
                         <div class="form-group">
                             <label for="password">Password:</label>
                             <input type="password" class="form-control" id="password" name="password" maxlength="255"
-                                value="{{user.password}}" required>
+                                value="">
                         </div>
 ​
                         <div class="form-group">
