--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -17,6 +17,9 @@
       <li class="nav-item {{#if (eq activePage 'account')}} active{{/if}}">
         <a class="nav-link" href="/admin/account/view">Manage Account</a>
       </li>
+       <li class="nav-item {{#if (eq activePage 'chart')}} active{{/if}}">
+        <a class="nav-link" href="/admin/academic/chart">Chart</a>
+      </li>
       {{/if}}
 
       {{!-- for Student --}}
