--- a/src/resources/views/submission/viewForCoordinator.hbs
+++ b/src/resources/views/submission/viewForCoordinator.hbs
@@ -1,58 +1,59 @@
 <h1 class="text-center mb-4">Manage Submissions {{facultyName}}</h1>
 
 <form action="/coordinator/submission/filter" method="GET">
-  <label for="status">Status:</label>
-  <select name="status" id="status">
-    <option value="">All</option>
-    <option value="pending">Pending</option>
-    <option value="approved">Approved</option>
-    <option value="rejected">Rejected</option>
-  </select>
+    <label for="status">Status:</label>
+    <select name="status" id="status">
+        <option value="">All</option>
+        <option value="pending">Pending</option>
+        <option value="approved">Approved</option>
+        <option value="rejected">Rejected</option>
+    </select>
 
-  <label for="search">Search:</label>
-  <input type="text" name="search" id="search">
+    <label for="search">Search:</label>
+    <input type="text" name="search" id="search">
 
-  <button type="submit">Apply Filters</button>
-<div class="row">
-    <div class="col-md-12">
-        <!-- Table for viewing all submissions -->
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Student's name</th>
-                        <th>Title</th>
-                        <th>Posted to (Magazine)</th>
-                        <th>Date submitted</th>
-                        {{!-- <th>Academic year </th> --}}
-                        <th>Status</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each submissions}}
-                    <tr>
-                        <td>{{this.student.fullName}}</td>
+    <button type="submit">Apply Filters</button>
+    <div class="row">
+        <div class="col-md-12">
+            <!-- Table for viewing all submissions -->
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Student's name</th>
+                            <th>Title</th>
+                            <th>Posted to (Magazine)</th>
+                            <th>Academic Year</th>
+                            <th>Date submitted</th>
+                            {{!-- <th>Academic year </th> --}}
+                            <th>Status</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each submissions}}
+                        <tr>
+                            <td>{{this.student.fullName}}</td>
 
-                        <td>{{this.title}}</td>
-                        <td>{{this.magazine.title}}</td>
-                        <td>{{formatDateForView this.dateSubmitted}}</td>
-                        {{!-- <td>{{this.magazine.academicYear.name}}({{formatDateForView
-                            this.magazine.academicYear.finalClosureDate}})</td> --}}
-                        <td>{{this.status}}</td>
-                      
+                            <td>{{this.title}}</td>
+                            <td>{{this.magazine.title}}</td>
+                            <td>{{this.magazine.academicYear.name}}</td>
 
-                        <td>
-                            {{#if (notOlderThanEighteenDays this.dateSubmitted)}}
-                            <a href="./{{this._id}}/edit" class="btn btn-sm btn-primary mr-2">Edit</a>
-                            {{/if}}
-                            <!-- Add additional actions as needed -->
-                        </td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+                            <td>{{formatDateForView this.dateSubmitted}}</td>
+                            {{!-- <td>{{this.magazine.academicYear.name}}({{formatDateForView
+                                this.magazine.academicYear.finalClosureDate}})</td> --}}
+                            <td>{{this.status}}</td>
+                            <td>
+                                {{#if (notOlderThanFourteenDays this.dateSubmitted)}}
+                                <a href="./{{this._id}}/edit" class="btn btn-sm btn-primary mr-2">Edit</a>
+                                {{/if}}
+                                <!-- Add additional actions as needed -->
+                            </td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
 </form>
