--- a/src/resources/views/submission/view.hbs
+++ b/src/resources/views/submission/view.hbs
@@ -36,3 +36,21 @@
         </div>
     </div>
 </div>
+<nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {{#if (gt totalPages 1)}}
+            {{#if (gt currentPage 1)}}
+            <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{sub currentPage 1}}">Previous</a></li>
+            {{/if}}
+            {{#each pages}}
+            <li class="page-item {{#if (eq this ../currentPage)}}active{{/if}}"><a class="page-link"
+                    href="?page={{this}}">{{this}}</a></li>
+            {{/each}}
+            {{#if (lt currentPage totalPages)}}
+            <li class="page-item"><a class="page-link" href="?page={{add currentPage 1}}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{totalPages}}">Last</a></li>
+            {{/if}}
+            {{/if}}
+        </ul>
+    </nav>
