--- a/src/resources/views/submission/viewForCoordinator.hbs
+++ b/src/resources/views/submission/viewForCoordinator.hbs
@@ -1,10 +1,10 @@
 <h1 class="text-center mb-4">Manage Submissions {{facultyName}}</h1>
 
-<form action="/coordinator/submission/filter" method="GET">
+<form action="/coordinator/submission/view" method="GET">
     <label for="status">Status:</label>
     <select name="status" id="status">
         <option value="">All</option>
-        <option value="pending">Pending</option>
+        <option value="submitted">Submitted</option>
         <option value="approved">Approved</option>
         <option value="rejected">Rejected</option>
     </select>
@@ -57,3 +57,21 @@
         </div>
     </div>
 </form>
+<nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {{#if (gt totalPages 1)}}
+            {{#if (gt currentPage 1)}}
+            <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{sub currentPage 1}}">Previous</a></li>
+            {{/if}}
+            {{#each pages}}
+            <li class="page-item {{#if (eq this ../currentPage)}}active{{/if}}"><a class="page-link"
+                    href="?page={{this}}">{{this}}</a></li>
+            {{/each}}
+            {{#if (lt currentPage totalPages)}}
+            <li class="page-item"><a class="page-link" href="?page={{add currentPage 1}}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{totalPages}}">Last</a></li>
+            {{/if}}
+            {{/if}}
+        </ul>
+    </nav>
