--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -4,7 +4,6 @@
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
     <ul class="navbar-nav ">
       {{!-- for Admin --}}
@@ -65,3 +64,4 @@
     </form>
   </div>
 </nav>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
