--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,9 +1,17 @@
-<footer class="footer-duckduy bg-light text-center py-4">
+<style>
+  footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+</style>
+<footer class="footer-duckduy bg-light mt-auto text-center py-4">
   <div class="container">
     <section class="d-flex justify-content-between mb-4">
       <a href="#" class="navbar-brand">
         <img
-          src="../../../public/img/duck.png"
+          src="https://i.gifer.com/XOsX.gif"
           alt="DuckDuy Logo"
           width="150"
           height="50"
