--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -16,7 +16,9 @@
 <body>
     <div class="app">
         {{> header}}
-        <div class="container">
+        <div class="container" style="
+    padding-bottom: 200px;
+">
             {{{body}}}
         </div>
         {{> footer}}
